--- a/web/index.html
+++ b/web/index.html
@@ -32,6 +32,25 @@
 </head>
 
 <body>
+  <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/7.9.1/firebase-analytics.js"></script>
+  <!-- Firebase Configuration -->
+  <script>
+    var firebaseConfig = {
+      apiKey: "AIzaSyBTy8jJEpWOIJ2EjkzEqeLTHgTRXQ7V3Jg",
+      authDomain: "dream-lent-word.firebaseapp.com",
+      projectId: "dream-lent-word",
+      storageBucket: "dream-lent-word.appspot.com",
+      messagingSenderId: "410098734373",
+      appId: "1:410098734373:web:fae55fdef69a8e5b8ab6cc",
+      measurementId: "G-VPFZ94WQVW"
+    };
+
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
+
   <!-- This script installs service_worker.js to provide PWA functionality to
        application. For more information, see:
        https://developers.google.com/web/fundamentals/primers/service-workers -->
@@ -99,6 +118,7 @@
       loadMainDartJs();
     }
   </script>
+
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/FileSaver.js/1.3.8/FileSaver.min.js">
   </script>
