--- a/web/index.html
+++ b/web/index.html
@@ -27,7 +27,7 @@
   <meta name="apple-mobile-web-app-title" content="lent_word_card">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
-  <title>lent_word_card</title>
+  <title>꿈의교회 사순절 말씀카드 뽑기</title>
   <link rel="manifest" href="manifest.json">
 </head>
 
